--- a/src/workshops/2020-04-10-faust-101.md
+++ b/src/workshops/2020-04-10-faust-101.md
@@ -1,9 +1,34 @@
-# Faust 101 for the confined
 
+<img src="img/logo-faust.png" width="80%" class="mx-auto d-block">
+
+# Faust 101 for the confined
 The covid-19 containment offers us at least one excellent opportunity to train! If you've always wanted to get into Faust programming but didn't have the time, here's your chance! 
 
 The objective of this workshop is to familiarize you with the Faust language through very simple examples of signal processing and sound synthesis.
-The documentation and the examples we will use can be found here: [https://faustdoc.grame.fr](https://faustdoc.grame.fr). All examples will be run in the online Faust IDE [https://faustide.grame.fr](https://faustide.grame.fr). If ever the sounds produced with the IDE are of poor quality, with some clicks, one can use the online editor, which is more rustic, but also lighter [https://fausteditor.grame.fr](https://fausteditor.grame.fr).
+The documentation and the examples we will use can be found here:
+
+- **[https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/](https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/)**
+
+Additionnally, the documentation of the Faust libraries is available here:
+
+- **[https://faustlibraries.grame.fr/](https://faustlibraries.grame.fr/)**
+
+All examples will be run in the online Faust IDE:
+
+- **[https://faustide.grame.fr](https://faustide.grame.fr)**
+
+If ever the sounds produced with the IDE are of poor quality, with some clicks, one can use the online editor, which is more rustic, but also lighter: 
+
+- **[https://fausteditor.grame.fr](https://fausteditor.grame.fr)**
+
+## Faust in few words
+
+- Faust is a Domain-Specific Language for real-time signal processing and synthesis (like Csound, Max/MSP, Supercollider, Puredata,. . . ).
+- Faust is based on purely functional approach
+- A Faust program denotes a signal processor : a function that maps input signals to output signals.
+- Programming in Faust is essentially combining signal processors using an algebra of 5 composition operations: `<: :> : , ~`
+- Faust is a compiled language, the role of the Faust compiler is to synthesize the most efficient implementations.
+- Faust offers end-users a high-level alternative to C to develop audio applications for a large variety of platforms.
 
 ## Part 1: Very simple examples
 
@@ -26,7 +51,7 @@ Several lessons can be learned from this very simple example:
 
 Lets try this program using the online Faust IDE...
 
-### Example 1: Adding two signals
+### Example 2: Adding two signals
 
 We saw in the previous example the primitive `_`. Faust has a large number of primitives, including all mathematical operations (see ).
 
@@ -40,7 +65,7 @@ process = +;
 <!-- /faust-run -->
 
 
-### Example 1: Multiplying two signals
+### Example 3: Multiplying two signals
 
 The `*` primitive for instance is used to multiply two signals. 
 
@@ -53,7 +78,7 @@ process = *;
 As you can hear, multiplying the two channels of a signal between them transforms the sound quite drastically.
 
 
-### Example 1: Parallel composition
+### Example 4: Parallel composition
 
 Programming in Faust consists in assembling primitive operations to form more or less complex audio circuits. To realize these assemblies Faust has 5 composition operations: `~`, `,`, `;`, `<:`, `:>`.  
 
@@ -66,9 +91,23 @@ process = _, _;
 ```
 <!-- /faust-run -->
 
-We made a _stereo cable_ and when we play the audio file we now hear it on both speakers.
+We made a _stereo cable_ and when we play the audio file, we now hear it on both speakers.
 
 It is very important to distinguish between _primitives_, such as `_`, `+` or `*`, and _composition operations_ such as `,` or `;`.  _Primitives_ represent operations on audio signals, whereas composition operations are used to link two audio operations together. In other words, you can write `+` or `*` alone, because they represent valid audio operations, but you can never write `,` or `:` alone because they are used to connect two audio operations. You must always write `A,B` or `A:B`.
+
+The primitives of Faust are organized in several categories. We find all the numerical functions of the C language, but applied to audio signals:
+
+| Category          | Primitives        |
+| ----------------- | ------------------ |
+| Arithmetic        | `+`, `-`, `*`, `/`, ... |
+| Comparison        | `<`, `==`, `!=`, `<=`, ...   |
+| Trigonometric     | `sin`, `cos`, ...   |
+| Log and Co.       | `log`, `exp`, ...  |
+| Min, Max          | `min`, `max`, ...   |
+| Selectors         | `select2`, `select3`, ...   |
+| Delays and Tables | `@`, `rdtable`, ...   |
+| GUI               | `hslider()`, `button()`, ...   |
+
 
 
 Here is a summary table of the five composition operators:
@@ -83,7 +122,7 @@ Here is a summary table of the five composition operators:
 
 
 
-### Example 1: Controlling the volume
+### Example 5: Controlling the volume
 
 Let's see an example where we combine three primitives:
   `_`, `0.1` and `*`,
@@ -103,7 +142,7 @@ Note that we have used parentheses in this example to clearly mark the order in 
 But, just as in `(2*3)+7` were the parentheses are not really necessary because multiplication takes precedence over addition, one could write directly `process = _,0.1 : *;` without the parentheses, because parallel composing takes precedence over sequential composing. The priority of the composition operators is shown in the previous table.
 
 
-### Example 1: Controlling the volume with a slider
+### Example 6: Controlling the volume with a slider
 
 Instead of controlling the volume by editing the code, it is far more convenient to use a graphical slider. For that purpose we can use a `hslider(...)`, a horizontal slider. It takes five parameters. The first one is the name `"volume"`, then we have the defaut value `0.1`, the mimimun value `0`, the maximum value `1` and a step value `0.1`. So here the default value is `0.1` 
 
@@ -113,7 +152,7 @@ process = _, hslider("volume", 0.1, 0, 1, 0.01) : *;
 ```
 <!-- /faust-run -->
 
-### Example 1: Mono Amplifier
+### Example 7: Mono Amplifier
 
 So far we have written very simple programs that fit into one line of code. We will now introduce additional definitions. A definition should be understood as a way of giving a name to something, which saves us from typing the definition every time and makes the program easier to understand.
  
@@ -127,7 +166,7 @@ process = monoamp;
 
 
 
-### Example 1: Stereo Amplifier
+### Example 8: Stereo Amplifier
  
 Continuing in the same vein, we will define a stereo amplifier as two mono amplifiers in parallel.
 
@@ -144,7 +183,7 @@ Note that even if the hslider volume appears several times in our code, there wi
 
 
 
-### Example 1: Vertical sliders
+### Example 9: Vertical sliders
 
 Instead of horizontal sliders, we could use vertical sliders. Just replace hslider(...) with vslider(...).
 
@@ -159,7 +198,7 @@ process = stereoamp;
 
 
 
-### Example 1: Knobs instead of sliders
+### Example 10: Knobs instead of sliders
 
 By default sliders are ... sliders! You can change their appearance by using the metadata mechanism. 
 
@@ -176,7 +215,7 @@ process = stereoamp;
 <!-- /faust-run -->
 
 
-### Example 1: Syntactic sugar
+### Example 11: Syntactic sugar
 
 So far we used the core syntax of Faust. For example to multiply the incomming signal by `0.1` we wrote `_,0.1:*`. For numerical expressions this notation is not always the most convenient and sometime we would prefer to use the more traditional infix notation and write instead `_*0.1`. We can also use the prefixed notation and write `*(0.1)`. 
 
@@ -214,7 +253,7 @@ These notations can be freely combined. For example, the following expressions a
 
 
 
-### Example 1: A _mute_ button
+### Example 12: A _mute_ button
 
 We would like to be able to mute the sound completely at the touch of a button, without having to change the volume. 
 
@@ -234,7 +273,7 @@ process = stereoamp;
 
 
 
-### Example 1: Vertical and horizontal Layout
+### Example 13: Vertical and horizontal Layout
 
 As can be seen in the previous example, by default, the layout of the elements is vertical. You can change this layout by using  `hgroup(...)` and  `vgroup(...)`. For example to make the layout horizontal you can write:
 
@@ -252,7 +291,7 @@ process = stereoamp;
 
 
 
-### Example 1: Differentiate the volume of the two channels
+### Example 14: Differentiate the volume of the two channels
 
 To differentiate the volume control of our two channels, we will parametrize monoamp with a channel number `c` which will be used to differentiate the name of each volume control. Note that the name `c` of the parameter must only have one letter to be well interpreted in the slider name `"volume %c[style:knob]"`.
 
@@ -271,7 +310,7 @@ process = stereoamp;
 
 
 
-### Example 1: Having many channels
+### Example 15: Having many channels
 
 We have built a stereo amp, but suppose we wanted to generalize this construction to an arbitrary number of channels. To do so, we will instroduce the `par(i, N, ...)` construction which allows us to put several times an expression in parallel. It is in a way the equivalent of the for() loop of a classical programming language. 
 
@@ -310,7 +349,7 @@ process = @(44100);
 <!-- /faust-run -->
 
 
-### Example 1: Delay of 0.1 second on the right channel
+### Example 2: Delay of 0.1 second on the right channel
 
 To hear the delay better, let's put it only on the right channel and leave the left channel unchanged.
 
@@ -321,7 +360,7 @@ process = _, @(4410);
 <!-- /faust-run -->
 
 
-### Example 1: Stereo Delay with freeze
+### Example 3: Stereo Delay with freeze
 
 
 
@@ -352,7 +391,7 @@ The first step is to build a _phase generator_ that produces a periodic sawtooth
 
 <img src="img/phase-sig.png" width="80%" class="mx-auto d-block">
 
-### Ramp
+### Example 1: Ramp
 
 To do this we will produce an "infinite" ramp, which we will then transform into a periodic signal thanks to a _part-decimal_ operation.
 
@@ -387,7 +426,7 @@ We can calculate the first values of \(y(t)\):
 - \(y(8) = y(7) + 0.125 = 9*0.125 = 1.125\)
 - ...
 
-### Signal de phase
+### Example 2: a phase signal
 
 How do I turn the above ramp into a sawtooth signal? By deleting the whole part of the samples in order to keep only the decimal part: \(3.14159\rightarrow 0.14159\).
 
@@ -441,7 +480,7 @@ and changing the desired frequency to `phase`::
 process = phase(440);
 ```
 
-### Sawtooth signal generator
+### Example 3: Sawtooth signal generator
 
 We can now use the phase generator to produce a sawtooth signal:
 
@@ -459,7 +498,7 @@ process = sawtooth(440);
 ```
 <!-- /faust-run -->
 
-### Square wave generator
+### Example 4: Square wave generator
 
 We can also use the phase generatorr to produce a square wave signal:
 
@@ -570,7 +609,7 @@ Note the use of the `sum(i, n, foo(i))` construction which is equivalent to `foo
 
 
 ### Example 6: Approximation of a square signal by additive synthesis
-We saw earlier how to produce a perfect square wave signal. This perfect square signal contains an infinite number of harmonics which, due to sampling, will fold over the audible spectrum, resulting in a less faithful noisy sound! A square signal can be approximated by additive synthesis, by adding an infinite series of odd harmonics (see [https://fr.wikipedia.org/wiki/Signal_carré](https://fr.wikipedia.org/wiki/Signal_carré)).
+We saw earlier how to produce a perfect square wave signal. This perfect square signal contains an infinite number of harmonics which, due to sampling, will fold over the audible spectrum, resulting in a less faithful noisy sound! A square signal can be approximated by additive synthesis, by adding an infinite series of odd harmonics (see [https://en.wikipedia.org/wiki/Square_wave](https://en.wikipedia.org/wiki/Square_wave)).
 
 <!-- faust-run -->
 ```
@@ -587,7 +626,7 @@ As an exercise, change the number of harmonics to see the approximation improve 
 
 ### Example 7: Approximation of a sawtooth signal by additive synthesis
 
-Similarly, a sawtooth signal can be approximated by additive synthesis, by adding an infinite series of harmonics (see [https://fr.wikipedia.org/wiki/Signal_en_dents_de_scie](https://fr.wikipedia.org/wiki/Signal_en_dents_de_scie)).
+Similarly, a sawtooth signal can be approximated by additive synthesis, by adding an infinite series of harmonics (see [https://en.wikipedia.org/wiki/Sawtooth_wave](https://en.wikipedia.org/wiki/Sawtooth_wave)).
 
 <!-- faust-run -->
 ```
@@ -602,7 +641,7 @@ process = sawtooth(55);
 <!-- /faust-run -->
 
 
-## Subtractive synthesis
+## Part 5: Subtractive synthesis
 Subtractive synthesis is the opposite of additive synthesis. It consists of starting from a rich sound, for example white noise, and sculpting its spectrum.
 
 ### Example 1 : a white noise
@@ -874,9 +913,9 @@ string(coef, freq, t60, level, trig) = no.noise*level
 ```
 <!-- /faust-run -->
 
-## Synthesis by frequency modulation
+## Part 6: Synthesis by frequency modulation
 
-### Example 1 : fm1
+### Example 1 : frequency modulation
 
 
 <!-- faust-run -->
@@ -898,7 +937,7 @@ process = FM(
 <!-- /faust-run -->
 
 
-### Example 2 : fm2
+### Example 2 : frequency modulation with envelops
 
 
 <!-- faust-run -->
