--- a/mkdocs/docs/workshops/2020-04-10-faust-101.md
+++ b/mkdocs/docs/workshops/2020-04-10-faust-101.md
@@ -2,14 +2,14 @@
 <img src="img/logo-faust.png" width="80%" class="mx-auto d-block">
 
 # Faust 101 for the confined
-The covid-19 containment offers us at least one excellent opportunity to train! If you've always wanted to get into Faust programming but didn't have the time, here's your chance! 
+The covid-19 containment gives us at least one excellent opportunity to train! If you've always wanted to get into Faust programming but didn't have the time, here's your chance! 
 
-The objective of this workshop is to familiarize you with the Faust language through very simple examples of signal processing and sound synthesis.
+The objective of this workshop is to help you get familiar with the Faust language through very simple examples of signal processing and sound synthesis.
 The documentation and the examples we will use can be found here:
 
 - **[https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/](https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/)**
 
-Additionnally, the documentation of the Faust libraries is available here:
+Additionnally, the documentation of Faust libraries is available here:
 
 - **[https://faustlibraries.grame.fr/](https://faustlibraries.grame.fr/)**
 
@@ -21,7 +21,7 @@ If ever the sounds produced with the IDE are of poor quality, with some clicks, 
 
 - **[https://fausteditor.grame.fr](https://fausteditor.grame.fr)**
 
-## Faust in few words
+## Faust in a few words
 
 - Faust is a Domain-Specific Language for real-time signal processing and synthesis (like Csound, Max/MSP, Supercollider, Puredata,. . . ).
 - Faust is based on purely functional approach
@@ -32,7 +32,7 @@ If ever the sounds produced with the IDE are of poor quality, with some clicks, 
 
 ## Part 1: Very simple examples
 
-Let start with some simple examples of Faust programs.
+Let's start with some simple examples of Faust programs.
 
 ### Example 1: The simplest Faust program
 This is the simplest Faust program imaginable. It contains only one line of code, the definition: `process = _;`.
@@ -54,9 +54,9 @@ Several lessons can be learned from this very simple example:
 
 - a Faust program has at least one definition, that of the keyword `process` which indicates the entry point of the program. 
 - A definition always ends with a `;`. A common mistake is to forget the semicolon at the end of a definition.
-- the `_` sign represents one of the _primitives_ of the language (primitives are the predefined functions of the language). It represents an _audio cable_ that lets the signal pass through without transforming it. This is what one calls in mathematics the _identity_ function, the signal which enters on the left comes out on the right identically. 
+- the `_` sign represents one of the _primitives_ of the language (primitives are the predefined functions of the language). It represents an _audio cable_ that lets the signal pass through without transforming it. This is what one calls in mathematics the _identity_ function, the signal that enters on the left comes out on the right identically. 
 
-Lets try this program using the online Faust IDE...
+Let's try this program using the online Faust IDE...
 
 ### Example 2: Adding two signals
 
@@ -196,7 +196,7 @@ process = _, hslider("volume", 0.1, 0, 1, 0.01) : *;
 
 ### Example 7: Mono Amplifier
 
-So far we have written very simple programs that fit into one line of code. We will now introduce additional definitions. A definition should be understood as a way of giving a name to something, which saves us from typing the definition every time and makes the program easier to understand.
+We have written very simple programs so far, that fit into one line of code. We will now introduce additional definitions. A definition should be understood as a way of giving a name to something, which saves us from typing the definition every time and makes the program easier to understand.
  
 
 <!-- faust-run -->
@@ -287,7 +287,7 @@ process = stereoamp;
 
 ### Example 11: Syntactic sugar
 
-So far we used the core syntax of Faust. For example to multiply the incomming signal by `0.1` we wrote `_,0.1:*`. For numerical expressions this notation is not always the most convenient and sometime we would prefer to use the more traditional infix notation and write instead `_*0.1`. We can also use the prefixed notation and write `*(0.1)`. 
+We have used the core syntax of Faust so far. For example to multiply the incomming signal by `0.1` we wrote `_,0.1:*`. For numerical expressions this notation is not always the most convenient and sometimes we would prefer to use the more traditional infix notation and write instead `_*0.1`. We can also use the prefixed notation and write `*(0.1)`. 
 
 Let's rewrite the definition of the monoamp using the prefix notation:
 
@@ -509,7 +509,7 @@ process = stereoecho_demo;
 
 ## Part 3: Basic Oscillators
 
-By convention, in Faust, a full-scale audio signal varies between -1 and +1, but first we will start with a sawtooth signal between 0 and 1 which will then be used as a _phase generator_ to produce different waveforms.
+By convention, in Faust, a full-scale audio signal varies between -1 and +1, but we will first start with a sawtooth signal between 0 and 1 which will then be used as a _phase generator_ to produce different waveforms.
 
 ### Phase Generator
 
@@ -647,7 +647,7 @@ process = sawtooth(440);
 
 ### Example 4: Square wave generator
 
-We can also use the phase generatorr to produce a square wave signal:
+We can also use the phase generator to produce a square wave signal:
 
 
 <!-- faust-run -->
@@ -852,7 +852,7 @@ process = sawtooth(55);
 
 
 ## Part 5: Subtractive synthesis
-Subtractive synthesis is the opposite of additive synthesis. It consists of starting from a rich sound, for example white noise, and sculpting its spectrum.
+Subtractive synthesis is the opposite of additive synthesis. It consists in starting from a rich sound, for example white noise, and sculpting its spectrum.
 
 ### Example 1 : a white noise
 
