--- a/src/workshops/2020-04-10-faust-101.md
+++ b/src/workshops/2020-04-10-faust-101.md
@@ -515,7 +515,7 @@ process = 0.125 : + ~ _ : decimalpart;
 From a mathematical point of view, that would be perfectly correct, but we will accumulate rounding errors. To keep total accuracy, it is better to place the operation of the decimal part inside the loop, like this:
 
 ```
-process = 0.125 : (+ : decimalpart) ~ _ ;
+process = 0.125 : (+ : decimalpart) ~ _;
 ```
 
 We can now try the whole code (**think about turning down the volume**) :
@@ -523,7 +523,7 @@ We can now try the whole code (**think about turning down the volume**) :
 <!-- faust-run -->
 ```
 decimalpart(x) = x-int(x);
-phase = 0.125 : (+ : decimalpart) ~ _ ;
+phase = 0.125 : (+ : decimalpart) ~ _;
 process = phase;
 ```
 <!-- /faust-run -->
@@ -535,13 +535,13 @@ Suppose we want our phase signal to have a frequency of 1 Hz, then the step shou
 If we want a frequency of 440 Hz, we need a 440 times larger step so that the phase signal goes from 0 to 1440 times faster.
 
 ```
-phase = 440/ma.SR : (+ : decimalpart) ~ _ ;
+phase = 440/ma.SR : (+ : decimalpart) ~ _;
 ```
 
 This definition can be generalized by replacing `440` with an `f` parameter:
 
 ```
-phase(f) = f/ma.SR : (+ : decimalpart) ~ _ ;
+phase(f) = f/ma.SR : (+ : decimalpart) ~ _;
 ```
 
 and changing the desired frequency to `phase`::
@@ -560,7 +560,7 @@ We can now use the phase generator to produce a sawtooth signal:
 import("stdfaust.lib");
 
 decimalpart(x) = x-int(x);
-phase(f) = f/ma.SR : (+ : decimalpart) ~ _ ;
+phase(f) = f/ma.SR : (+ : decimalpart) ~ _;
 
 sawtooth(f) = phase(f) * 2 - 1;
 
@@ -578,7 +578,7 @@ We can also use the phase generator to produce a square wave signal:
 import("stdfaust.lib");
 
 decimalpart(x) = x-int(x);
-phase(f) = f/ma.SR : (+ : decimalpart) ~ _ ;
+phase(f) = f/ma.SR : (+ : decimalpart) ~ _;
 
 squarewave(f) = (phase(f) > 0.5) * 2 - 1;
 
@@ -598,7 +598,7 @@ The phase generator is also the basis of the sine wave generator:
 import("stdfaust.lib");
 
 decimalpart(x) = x-int(x);
-phase(f) = f/ma.SR : (+ : decimalpart) ~ _ ;
+phase(f) = f/ma.SR : (+ : decimalpart) ~ _;
 
 osc(f) = sin(phase(f) * 2 * ma.PI);
 
@@ -672,7 +672,7 @@ import("stdfaust.lib");
 // n = partial number startibng at 1
 partial(n,f) = os.osc(f*n) * hslider("partial %n", 0.25, 0, 1, 0.01);
 
-process 	= sum(i, 4, partial(i+1,hslider("freq", 440, 20, 8000, 0.001)));
+process = sum(i, 4, partial(i+1,hslider("freq", 440, 20, 8000, 0.001)));
 ```
 <!-- /faust-run -->
 Note the use of the `sum(i, n, foo(i))` construction which is equivalent to `foo(0)+foo(1)+...+foo(n-1)`.
@@ -818,7 +818,7 @@ transformation = @(0) : *(hslider("gain", 0, -0.95, 0.95, 0.01));
 ```
 import("stdfaust.lib");
 
-// IIR, Filtre en peigne
+// IIR, comb filter
 process = no.noise * hslider("noise", 0.5, 0, 1, 0.01) :
         + ~ transformation;
         
