--- a/mkdocs/docs/workshops/2020-04-10-faust-101.md
+++ b/mkdocs/docs/workshops/2020-04-10-faust-101.md
@@ -1,5 +1,5 @@
 
-<img src="img/logo-faust.png" width="80%" class="mx-auto d-block">
+<img src="img/logo-faust.png" width="100%" class="mx-auto d-block">
 
 # Faust 101 for the confined
 The covid-19 containment gives us at least one excellent opportunity to train! If you've always wanted to get into Faust programming but didn't have the time, here's your chance! 
@@ -31,6 +31,7 @@ If ever the sounds produced with the IDE are of poor quality, with some clicks, 
 - Faust offers end-users a high-level alternative to C to develop audio applications for a large variety of platforms.
 
 ## Part 1: Very simple examples
+<img src="img/bande-simple.png" width="100%" class="mx-auto d-block">
 
 Let's start with some simple examples of Faust programs.
 
@@ -436,6 +437,7 @@ process = multiamp(2); // try multiamp(4)
 
 
 ## Part 2: Delays and Feedbacks
+<img src="img/bande-feedback.png" width="100%" class="mx-auto d-block">
 
 In this new section we will see two important notions, that of delay with the `@` primitive, and that of feedback (from a looped circuit) which will require the use of the recursive composition `A~B` which allows to loop the outputs of A into the inputs of B and the outputs of B into the inputs of A.
 
@@ -542,7 +544,7 @@ process = stereoecho;
 <!-- /faust-run -->
 
 
-### Example 6: A stereophonic echo
+### Example 6: Adding parameters
 
 We will now generalize our echo with parameters to control its duration and feedback level.
 
@@ -613,6 +615,7 @@ process = stereoecho(44100/4, hslider("feedback", 0, 0, 1, 0.01));
 
 
 ## Part 3: Basic Oscillators
+<img src="img/bande-basic.png" width="100%" class="mx-auto d-block">
 
 By convention, in Faust, a full-scale audio signal varies between -1 and +1, but we will first start with a sawtooth signal between 0 and 1 which will then be used as a _phase generator_ to produce different waveforms.
 
@@ -620,13 +623,13 @@ By convention, in Faust, a full-scale audio signal varies between -1 and +1, but
 
 The first step is to build a _phase generator_ that produces a periodic sawtooth signal between 0 and 1. Here is the signal we want to generate :
 
-<img src="img/phase-sig.png" width="80%" class="mx-auto d-block">
+<img src="img/phase-sig.png" width="100%" class="mx-auto d-block">
 
 ### Example 1: Ramp
 
 To do this we will produce an "infinite" ramp, which we will then transform into a periodic signal thanks to a _part-decimal_ operation.
 
-<img src="img/ramp-sig.png" width="80%" class="mx-auto d-block">
+<img src="img/ramp-sig.png" width="100%" class="mx-auto d-block">
 
 The ramp is produced by the following program :
 
@@ -648,7 +651,7 @@ process = 0.125 : + ~ _;
 
 To understand the above diagram, we will annotate it with its mathematical semantics.
 
-<img src="img/ramp-diag-math.svg" width="80%" class="mx-auto d-block">
+<img src="img/ramp-diag-math.svg" width="100%" class="mx-auto d-block">
 
 As can be seen in the diagram, the formula for the output signal is: \(y(t) = y(t-1) + 0.125\)
 
@@ -777,6 +780,7 @@ process = squarewave(440);
 
 
 ## Part 4: Additive synthesis
+<img src="img/bande-additive.png" width="100%" class="mx-auto d-block">
 
 ### Example 1: sine wave generator
 
@@ -957,6 +961,8 @@ process = sawtooth(55);
 
 
 ## Part 5: Subtractive synthesis
+<img src="img/bande-substractive.png" width="100%" class="mx-auto d-block">
+
 Subtractive synthesis is the opposite of additive synthesis. It consists in starting from a rich sound, for example white noise, and sculpting its spectrum.
 
 ### Example 1 : a white noise
@@ -1306,6 +1312,7 @@ string(coef, freq, t60, level, trig) = no.noise*level
 <!-- /faust-run -->
 
 ## Part 6: Synthesis by frequency modulation
+<img src="img/bande-fm.png" width="100%" class="mx-auto d-block">
 
 ### Example 1 : frequency modulation
 
