--- a/src/workshops/2020-04-10-faust-101.md
+++ b/src/workshops/2020-04-10-faust-101.md
@@ -643,7 +643,7 @@ As an exercise, replace, in the previous example, the frequency 440 by a horizon
 ```
 import("stdfaust.lib");
 
-process = os.osc(440 /*a remplacer*/) * hslider("gain", 0.1, 0, 1, 0.01);
+process = os.osc(440 /*to replace*/) * hslider("gain", 0.1, 0, 1, 0.01);
 ```
 <!-- /faust-run -->
 
