last moment additions to faust 101

--- a/mkdocs/docs/workshops/2020-04-10-faust-101.md
+++ b/mkdocs/docs/workshops/2020-04-10-faust-101.md
@@ -9,9 +9,6 @@ The documentation and the examples we will use can be found here:
 
 - **[https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/](https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/)**
 
-Additionnally, the documentation of Faust libraries is available here:
-
-- **[https://faustlibraries.grame.fr/](https://faustlibraries.grame.fr/)**
 
 All examples will be run in the online Faust IDE:
 
@@ -686,7 +683,7 @@ process = 0.125 : + ~ _ : decimalpart;
 From a mathematical point of view, that would be perfectly correct, but we will accumulate rounding errors. To keep total accuracy, it is better to place the operation of the decimal part inside the loop, like this:
 
 ```
-process = 0.125 : (+ : decimalpart) ~ _ ;
+process = 0.125 : (+ : decimalpart) ~ _;
 ```
 
 We can now try the whole code (**think about turning down the volume**) :
@@ -696,7 +693,7 @@ We can now try the whole code (**think about turning down the volume**) :
 ~~~
 
 decimalpart(x) = x-int(x);
-phase = 0.125 : (+ : decimalpart) ~ _ ;
+phase = 0.125 : (+ : decimalpart) ~ _;
 process = phase;
 
 ~~~
@@ -713,13 +710,13 @@ Suppose we want our phase signal to have a frequency of 1 Hz, then the step shou
 If we want a frequency of 440 Hz, we need a 440 times larger step so that the phase signal goes from 0 to 1440 times faster.
 
 ```
-phase = 440/ma.SR : (+ : decimalpart) ~ _ ;
+phase = 440/ma.SR : (+ : decimalpart) ~ _;
 ```
 
 This definition can be generalized by replacing `440` with an `f` parameter:
 
 ```
-phase(f) = f/ma.SR : (+ : decimalpart) ~ _ ;
+phase(f) = f/ma.SR : (+ : decimalpart) ~ _;
 ```
 
 and changing the desired frequency to `phase`::
@@ -740,7 +737,7 @@ We can now use the phase generator to produce a sawtooth signal:
 import("stdfaust.lib");
 
 decimalpart(x) = x-int(x);
-phase(f) = f/ma.SR : (+ : decimalpart) ~ _ ;
+phase(f) = f/ma.SR : (+ : decimalpart) ~ _;
 
 sawtooth(f) = phase(f) * 2 - 1;
 
@@ -765,7 +762,7 @@ We can also use the phase generator to produce a square wave signal:
 import("stdfaust.lib");
 
 decimalpart(x) = x-int(x);
-phase(f) = f/ma.SR : (+ : decimalpart) ~ _ ;
+phase(f) = f/ma.SR : (+ : decimalpart) ~ _;
 
 squarewave(f) = (phase(f) > 0.5) * 2 - 1;
 
@@ -793,7 +790,7 @@ The phase generator is also the basis of the sine wave generator:
 import("stdfaust.lib");
 
 decimalpart(x) = x-int(x);
-phase(f) = f/ma.SR : (+ : decimalpart) ~ _ ;
+phase(f) = f/ma.SR : (+ : decimalpart) ~ _;
 
 osc(f) = sin(phase(f) * 2 * ma.PI);
 
@@ -902,7 +899,7 @@ import("stdfaust.lib");
 // n = partial number startibng at 1
 partial(n,f) = os.osc(f*n) * hslider("partial %n", 0.25, 0, 1, 0.01);
 
-process 	= sum(i, 4, partial(i+1,hslider("freq", 440, 20, 8000, 0.001)));
+process = sum(i, 4, partial(i+1,hslider("freq", 440, 20, 8000, 0.001)));
 
 ~~~
 
@@ -960,6 +957,34 @@ process = sawtooth(55);
 <!-- /faust-run -->
 
 
+### Example 8: Band limited oscillators
+
+The problem of aliasing can be solved using band-limited oscillators available in Faust libraries.
+
+
+<!-- faust-run -->
+<div class="faust-run"><img src="exfaust35/exfaust35.svg" class="mx-auto d-block">
+~~~
+
+import("stdfaust.lib");
+
+decimalpart(x) = x-int(x);
+phase(f) = f/ma.SR : (+ : decimalpart) ~ _;
+
+sawtooth(f) = phase(f) * 2 - 1;
+
+//process = sawtooth(440);
+
+process = os.sawN(3,400);
+
+~~~
+
+<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust35/exfaust35.dsp" target="editor">
+<button type="button" class="btn btn-primary">Try it Yourself >></button></a>
+</div>
+<!-- /faust-run -->
+
+
 ## Part 5: Subtractive synthesis
 <img src="img/bande-substractive.png" width="100%" class="mx-auto d-block">
 
@@ -969,7 +994,7 @@ Subtractive synthesis is the opposite of additive synthesis. It consists in star
 
 A white noise generator
 <!-- faust-run -->
-<div class="faust-run"><img src="exfaust35/exfaust35.svg" class="mx-auto d-block">
+<div class="faust-run"><img src="exfaust36/exfaust36.svg" class="mx-auto d-block">
 ~~~
 
 import("stdfaust.lib");
@@ -978,7 +1003,7 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01);
 
 ~~~
 
-<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust35/exfaust35.dsp" target="editor">
+<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust36/exfaust36.dsp" target="editor">
 <button type="button" class="btn btn-primary">Try it Yourself >></button></a>
 </div>
 <!-- /faust-run -->
@@ -987,7 +1012,7 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01);
 
 
 <!-- faust-run -->
-<div class="faust-run"><img src="exfaust36/exfaust36.svg" class="mx-auto d-block">
+<div class="faust-run"><img src="exfaust37/exfaust37.svg" class="mx-auto d-block">
 ~~~
 
 import("stdfaust.lib");
@@ -997,7 +1022,7 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01) : fi.lowpass(3, hslider("
 
 ~~~
 
-<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust36/exfaust36.dsp" target="editor">
+<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust37/exfaust37.dsp" target="editor">
 <button type="button" class="btn btn-primary">Try it Yourself >></button></a>
 </div>
 <!-- /faust-run -->
@@ -1006,7 +1031,7 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01) : fi.lowpass(3, hslider("
 
 
 <!-- faust-run -->
-<div class="faust-run"><img src="exfaust37/exfaust37.svg" class="mx-auto d-block">
+<div class="faust-run"><img src="exfaust38/exfaust38.svg" class="mx-auto d-block">
 ~~~
 
 import("stdfaust.lib");
@@ -1016,7 +1041,7 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01) : fi.highpass(3, hslider(
 
 ~~~
 
-<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust37/exfaust37.dsp" target="editor">
+<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust38/exfaust38.dsp" target="editor">
 <button type="button" class="btn btn-primary">Try it Yourself >></button></a>
 </div>
 <!-- /faust-run -->
@@ -1025,7 +1050,7 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01) : fi.highpass(3, hslider(
 
 
 <!-- faust-run -->
-<div class="faust-run"><img src="exfaust38/exfaust38.svg" class="mx-auto d-block">
+<div class="faust-run"><img src="exfaust39/exfaust39.svg" class="mx-auto d-block">
 ~~~
 
 import("stdfaust.lib");
@@ -1037,7 +1062,7 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01)
 
 ~~~
 
-<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust38/exfaust38.dsp" target="editor">
+<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust39/exfaust39.dsp" target="editor">
 <button type="button" class="btn btn-primary">Try it Yourself >></button></a>
 </div>
 <!-- /faust-run -->
@@ -1046,7 +1071,7 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01)
 
 
 <!-- faust-run -->
-<div class="faust-run"><img src="exfaust39/exfaust39.svg" class="mx-auto d-block">
+<div class="faust-run"><img src="exfaust40/exfaust40.svg" class="mx-auto d-block">
 ~~~
 
 import("stdfaust.lib");
@@ -1059,7 +1084,7 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01)
 
 ~~~
 
-<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust39/exfaust39.dsp" target="editor">
+<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust40/exfaust40.dsp" target="editor">
 <button type="button" class="btn btn-primary">Try it Yourself >></button></a>
 </div>
 <!-- /faust-run -->
@@ -1069,7 +1094,7 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01)
 
 
 <!-- faust-run -->
-<div class="faust-run"><img src="exfaust40/exfaust40.svg" class="mx-auto d-block">
+<div class="faust-run"><img src="exfaust41/exfaust41.svg" class="mx-auto d-block">
 ~~~
 
 import("stdfaust.lib");
@@ -1082,7 +1107,7 @@ transformation = @(1) : *(hslider("gain", 0, -1, 1, 0.1));
 
 ~~~
 
-<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust40/exfaust40.dsp" target="editor">
+<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust41/exfaust41.dsp" target="editor">
 <button type="button" class="btn btn-primary">Try it Yourself >></button></a>
 </div>
 <!-- /faust-run -->
@@ -1092,7 +1117,7 @@ transformation = @(1) : *(hslider("gain", 0, -1, 1, 0.1));
 
 
 <!-- faust-run -->
-<div class="faust-run"><img src="exfaust41/exfaust41.svg" class="mx-auto d-block">
+<div class="faust-run"><img src="exfaust42/exfaust42.svg" class="mx-auto d-block">
 ~~~
 
 import("stdfaust.lib");
@@ -1105,7 +1130,7 @@ transformation = @(0) : *(hslider("gain", 0, -0.95, 0.95, 0.01));
 
 ~~~
 
-<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust41/exfaust41.dsp" target="editor">
+<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust42/exfaust42.dsp" target="editor">
 <button type="button" class="btn btn-primary">Try it Yourself >></button></a>
 </div>
 <!-- /faust-run -->
@@ -1115,12 +1140,12 @@ transformation = @(0) : *(hslider("gain", 0, -0.95, 0.95, 0.01));
 
 
 <!-- faust-run -->
-<div class="faust-run"><img src="exfaust42/exfaust42.svg" class="mx-auto d-block">
+<div class="faust-run"><img src="exfaust43/exfaust43.svg" class="mx-auto d-block">
 ~~~
 
 import("stdfaust.lib");
 
-// IIR, Filtre en peigne
+// IIR, comb filter
 process = no.noise * hslider("noise", 0.5, 0, 1, 0.01) :
         + ~ transformation;
         
@@ -1128,7 +1153,7 @@ transformation = @(hslider("delay", 0, 0, 20, 1)) : *(hslider("gain", 0, -0.98, 
 
 ~~~
 
-<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust42/exfaust42.dsp" target="editor">
+<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust43/exfaust43.dsp" target="editor">
 <button type="button" class="btn btn-primary">Try it Yourself >></button></a>
 </div>
 <!-- /faust-run -->
@@ -1138,7 +1163,7 @@ transformation = @(hslider("delay", 0, 0, 20, 1)) : *(hslider("gain", 0, -0.98, 
 
 
 <!-- faust-run -->
-<div class="faust-run"><img src="exfaust43/exfaust43.svg" class="mx-auto d-block">
+<div class="faust-run"><img src="exfaust44/exfaust44.svg" class="mx-auto d-block">
 ~~~
 
 import("stdfaust.lib");
@@ -1153,7 +1178,7 @@ moyenne(x) = (x+x')/2;
 
 ~~~
 
-<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust43/exfaust43.dsp" target="editor">
+<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust44/exfaust44.dsp" target="editor">
 <button type="button" class="btn btn-primary">Try it Yourself >></button></a>
 </div>
 <!-- /faust-run -->
@@ -1163,7 +1188,7 @@ moyenne(x) = (x+x')/2;
 
 
 <!-- faust-run -->
-<div class="faust-run"><img src="exfaust44/exfaust44.svg" class="mx-auto d-block">
+<div class="faust-run"><img src="exfaust45/exfaust45.svg" class="mx-auto d-block">
 ~~~
 
 import("stdfaust.lib");
@@ -1184,7 +1209,7 @@ upfront(x) = x>x';
 
 ~~~
 
-<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust44/exfaust44.dsp" target="editor">
+<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust45/exfaust45.dsp" target="editor">
 <button type="button" class="btn btn-primary">Try it Yourself >></button></a>
 </div>
 <!-- /faust-run -->
@@ -1194,7 +1219,7 @@ upfront(x) = x>x';
 
 
 <!-- faust-run -->
-<div class="faust-run"><img src="exfaust45/exfaust45.svg" class="mx-auto d-block">
+<div class="faust-run"><img src="exfaust46/exfaust46.svg" class="mx-auto d-block">
 ~~~
 
 declare name  	"myKisana";
@@ -1306,7 +1331,7 @@ string(coef, freq, t60, level, trig) = no.noise*level
 
 ~~~
 
-<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust45/exfaust45.dsp" target="editor">
+<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust46/exfaust46.dsp" target="editor">
 <button type="button" class="btn btn-primary">Try it Yourself >></button></a>
 </div>
 <!-- /faust-run -->
@@ -1318,7 +1343,7 @@ string(coef, freq, t60, level, trig) = no.noise*level
 
 
 <!-- faust-run -->
-<div class="faust-run"><img src="exfaust46/exfaust46.svg" class="mx-auto d-block">
+<div class="faust-run"><img src="exfaust47/exfaust47.svg" class="mx-auto d-block">
 ~~~
 
 import("stdfaust.lib");
@@ -1337,7 +1362,7 @@ process = FM(
 
 ~~~
 
-<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust46/exfaust46.dsp" target="editor">
+<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust47/exfaust47.dsp" target="editor">
 <button type="button" class="btn btn-primary">Try it Yourself >></button></a>
 </div>
 <!-- /faust-run -->
@@ -1347,7 +1372,7 @@ process = FM(
 
 
 <!-- faust-run -->
-<div class="faust-run"><img src="exfaust47/exfaust47.svg" class="mx-auto d-block">
+<div class="faust-run"><img src="exfaust48/exfaust48.svg" class="mx-auto d-block">
 ~~~
 
 import("stdfaust.lib");
@@ -1372,7 +1397,16 @@ upfront(x) = x>x';
 
 ~~~
 
-<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust47/exfaust47.dsp" target="editor">
+<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust48/exfaust48.dsp" target="editor">
 <button type="button" class="btn btn-primary">Try it Yourself >></button></a>
 </div>
 <!-- /faust-run -->
+
+
+
+# Further readings
+
+The documentation of Faust libraries is available here:
+
+- **[https://faustlibraries.grame.fr/](https://faustlibraries.grame.fr/)**
+
