--- a/src/workshops/2020-04-10-faust-101.md
+++ b/src/workshops/2020-04-10-faust-101.md
@@ -9,9 +9,6 @@ The documentation and the examples we will use can be found here:
 
 - **[https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/](https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/)**
 
-Additionnally, the documentation of Faust libraries is available here:
-
-- **[https://faustlibraries.grame.fr/](https://faustlibraries.grame.fr/)**
 
 All examples will be run in the online Faust IDE:
 
@@ -715,6 +712,27 @@ process = sawtooth(55);
 <!-- /faust-run -->
 
 
+### Example 8: Band limited oscillators
+
+The problem of aliasing can be solved using band-limited oscillators available in Faust libraries.
+
+
+<!-- faust-run -->
+```
+import("stdfaust.lib");
+
+decimalpart(x) = x-int(x);
+phase(f) = f/ma.SR : (+ : decimalpart) ~ _;
+
+sawtooth(f) = phase(f) * 2 - 1;
+
+//process = sawtooth(440);
+
+process = os.sawN(3,400);
+```
+<!-- /faust-run -->
+
+
 ## Part 5: Subtractive synthesis
 <img src="img/bande-substractive.png" width="100%" class="mx-auto d-block">
 
@@ -1040,3 +1058,12 @@ upfront(x) = x>x';
 
 ```
 <!-- /faust-run -->
+
+
+
+# Further readings
+
+The documentation of Faust libraries is available here:
+
+- **[https://faustlibraries.grame.fr/](https://faustlibraries.grame.fr/)**
+
